samples/_failures_safe/1761340714_1f771f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_651914ef.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_651914ef.c:147: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_651914ef.c:146:5: error: expected declaration or statement at end of input
  146 |     if (a->cols != b->rows) return NULL
      |     ^~
